<resources>
    <string name="app_name">SmartU</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="Nickname">Nickname</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Signup</string>
    <string name="Email">Email</string>
    <string name="ID">ID</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="title_activity_main_activity_test">MainActivityTest</string>
    <string name="title_section1">Tunonno</string>
    <string name="title_section2">Tumadre</string>
    <string name="title_section3">SborramiNegliOcchi</string>
    <string name="action_example">Example action</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_classroom">Classroom</string>
    <string name="title_activity_notice_board">NoticeBoard</string>
    <string name="title_activity_board">Board</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="logout_string">LogOut</string>
    <string name="title_activity_test">Test</string>

    <string name="signup_failure">ERROR! E-mail address inserted already exists. Sign up with another e-mail address.</string>

    <string name="label_menu_1">SmartU</string>
    <!--<string name="label_menu_2">griseliti4</string>-->

    <string name="introduction">The application aims at providing undergraduate students with a nice tool
                                of checking the status (classroom in which a lecture is held,
                                whether a classroom is lecture-free at a certain moment, the number of students in a classroom)
                                of the lectures/classrooms at the university.\n\n
                                Once signed in, if the Bluetooth is turned off, you will be asked whether to turn it on:
                                you will be able to use the app only with Bluetooth turned on!</string>

    <string name="help">In this section you can see features of the classroom you are in.
                        By "Ranging" it is meant the scan of the device (smartphone, tablet)
                        searching, in the area, for the hotspots from which you can retrieve your
                        classrooms data: if it is ON, your device is connected to such hotspots.
                        At the left of the screen you can slide your fingers from left to right and a
                        menu opens: here you can register to courses, you can go to the section of
                        courses you are registered to, you can see the quietest classroom, the empty
                        one (if any) and also can go to the section of the data about the other
                        classrooms.\n\n
                        Once registered to a course, you can go to the section of the courses you
                        have registered to: you can choose one of the courses, having so the
                        possibility of checking (if there is a lecture) the classroom in which the
                        lecture of the course is held, of entering the board section where it is
                        possible for you to talk to the other students attending the course (by means of a chat box),
                        and of unsubscribing from the course.</string>

</resources>
