<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".activities.SignupActivity"
    tools:showIn="@layout/signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_txt"
        android:text="SIGNUP"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nickname_edittext"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/signup_txt"
        android:layout_marginTop="@dimen/signup_margin_top"
        android:hint="@string/Nickname" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nickname_edittext"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/signup_margin_top"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edittext"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/signup_margin_top"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/matricula_edittext"
        android:layout_below="@id/email_edittext"
        android:layout_marginTop="@dimen/signup_margin_top"
        android:hint="@string/Matricula" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/matricula_edittext"
        android:layout_marginTop="@dimen/signup_margin_top"
        android:hint="@string/Name" />

    <EditText
        android:id="@+id/surname_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/name_edittext"
        android:layout_marginTop="@dimen/signup_margin_top"
        android:hint="@string/Surname" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surname_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/signup_button_margin_top"
        style="@style/StandardButton"
        android:background="@drawable/buttonshape"
        android:text="@string/SignupBtn" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar_signup"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
