<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginRegActivity">

    <TextView
        android:id="@+id/title_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="SmartU"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/txtemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_id"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/emailLoginReg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtemail"
        android:inputType="text|textEmailAddress" />

    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLoginReg"
        android:textColor="@color/black"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/passwordLoginReg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/StandardButton"
        android:background="@drawable/buttonshape"
        android:text="@string/LoginBtn"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/signup" />

    <Button
        android:id="@+id/signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/StandardButton"
        android:background="@drawable/buttonshape"
        android:text="@string/SignupBtn"
        android:layout_alignParentBottom="true" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginreg_progressbar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <!-- aggiunto tom -->
    <Button
        style="@style/StandardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Info"
        android:id="@+id/note"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttonshape"
        android:layout_above="@id/login"
        android:layout_centerHorizontal="true" />
    <!--       -->

</RelativeLayout>
